Fixed player portrait z-index

--- a/components/Hud/player.scss
+++ b/components/Hud/player.scss
@@ -6,8 +6,16 @@
 	left: 0;
 	width: 200px;
 	height: 85px;
-	background: url(/static/images/hud/player/img_player-frame.png) no-repeat center center;
 	font-family: "friz";
+	.frame {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 2;
+		background: url(/static/images/hud/player/img_player-frame.png) no-repeat center center;
+	}
 	.image {
 		position: absolute;
 		top: 7px;
@@ -15,7 +23,7 @@
 		width: 60px;
 		height: 60px;
 		background: url(/static/images/hud/player/portrait.png) no-repeat center center;
-		z-index: -1;
+		z-index: 1;
 		display: block;
 	}
 	.name {
@@ -28,12 +36,14 @@
     color: $gold;
     font-size: 12px;
     text-align: center;
+    z-index: 3;
 	}
 	.bar {
 		color: white;
 		font-size: 9px;
 		text-align: right;
 		position: absolute;
+		z-index: 3;
 		left: 72px;
 		width: 110px;
 		line-height: 10px;
@@ -54,6 +64,7 @@
 	.level {
 		color: $gold;
 		position: absolute;
+		z-index: 3;
 		width: 22px;
 		height: 15px;
 		top: 54px;
